# nebula-media-converter

./: .env  .env.example  .gitignore  .htaccess  .lighthouserc.json  AUTHENTICATION_GUIDE.md  BROWSER_EXTENSIONS_GUIDE.md  BUTTON_FIXES.md  CPP_INTEGRATION_GUIDE.md  DONATION_SYSTEM.md  EXTENSION_ERROR_FIX.md  FFMPEG_STABILITY.md  PERFORMANCE_OPTIMIZATIONS.md  PWA_GUIDE.md  PWA_IMPLEMENTATION.md  PWA_QUICKSTART.md  QUICKSTART_CPP.md  README.md  SECURITY.md  SECURITY_CHECKS.md  SECURITY_IMPLEMENTATION.md  SIGNUP_SYSTEM.md  STORAGE_SCALING_GUIDE.md  _headers  admin-reset.html  azure-package.json  azure-pipelines.yml  binding.gyp  deploy.cmd  electron-builder.yml  electron.js  index.html  manifest.json  package-lock.json  package.json  react-error-overlay-filter.js  server.js  service-worker.js  staticwebapp.config.json  test.html  (+2 more)
.github/: CODEOWNERS  SECURITY.md  WORKFLOWS.md  dependabot.yml
assets/: AdminDashboard-CDvxBDGv.js  AdminDashboard-CInQ_NDJ.js  AdminDashboard-Ujodu-SR.js  AdminDashboard-mwREa-JQ.js  AdminLogin-2J6OUFZv.css  AdminLogin-BXIPW9GS.js  AdminLogin-DK4kW5HL.js  AdminLogin-d6A1Jpzz.js  AdvancedTools-BfMhkLsA.js  AdvancedTools-CtxnH7FZ.js  AdvancedTools-iDKwDqLB.js  AuthScreen-30R4AitS.js  AuthScreen-D1vJKoVt.css  AuthScreen-D8w_fZfD.js  AuthScreen-DA_pOZHJ.js  CloudIntegration-B09QTKw4.js  CloudIntegration-BkhsXfax.js  CloudIntegration-CuwRl2aY.css  CloudIntegration-DFc9WAZC.js  DesktopFeatures-B71Yg0Mr.js  DesktopFeatures-CWIzblUS.js  FFmpegTest-BD9JQZyI.js  (+56 more)
backend/cpp_server/: CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json  main.cpp
(+167 files in other folders)
